--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
         bottom: 0;
         z-index: 999;
       }
+      @media (max-width: 991px) { nav.navbar.navbar-expand-lg.navbar-light.bg-light {
+        position: fixed;
+    margin-top: 1em;
+    margin-left: 1em;
+    z-index: 2222;
+}
+a.bubbly-button {
+    margin-top: -4em;
+}
+button.navbar-toggler.collapsed {
+    display: none;
+}
+}
 
       @media (min-width: 991px) {
         nav.navbar.navbar-expand-lg.navbar-light.bg-light {
