--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@ button.navbar-toggler.collapsed {
               <h1 class="title">
                 Empowering Online Presence: Web Development Experts
               </h1>
-              <div class="aurora">
+              <!-- <div class="aurora">
                 <div class="aurora__item"></div>
                 <div class="aurora__item"></div>
                 <div class="aurora__item"></div>
                 <div class="aurora__item"></div>
-              </div>
+              </div> -->
               <p>
                 Welcome to our innovative web development and design group,
                 where we are passionate about creating remarkable websites that
@@ -623,6 +623,9 @@ button.navbar-toggler.collapsed {
       </div>
     </div>
     <!-- copyright section end -->
+    <!-- loaderrrrrrr -->
+    
+    <!-- loader end -->
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -748,5 +751,7 @@ bubblyButtons[i].addEventListener('click', animateButton, false);
  list.forEach((item) =>
  item.addEventListener('click',activeLink));
     </script>
+
+    
   </body>
 </html>
